// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should render a basic checkbox group 1`] = `
<fieldset
  class="form-group"
>
  <legend
    id="bar"
  >
    Test checkbox group
  </legend>
  <div
    aria-labelledby="bar"
    role="group"
  >
    <div>
      <span>
        FocusCatcher
      </span>
      <input
        id="foo-one"
        name="one"
      />
      <label
        for="foo-one"
      >
        One
      </label>
      <input
        id="foo-two"
        name="two"
      />
      <label
        for="foo-two"
      >
        Two
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`CheckboxGroup should render a content hint if given 1`] = `
<fieldset
  class="form-group"
>
  <legend
    id="bar"
  >
    Test checkbox group
  </legend>
  <div
    aria-describedby="inf"
    aria-labelledby="bar"
    role="group"
  >
    <div>
      <span>
        FocusCatcher
      </span>
      <input
        id="foo-one"
        name="one"
      />
      <label
        for="foo-one"
      >
        One
      </label>
      <input
        id="foo-two"
        name="two"
      />
      <label
        for="foo-two"
      >
        Two
      </label>
    </div>
  </div>
  <div
    class="info-wrapper"
  >
    <span
      class="icon"
    />
    <span
      id="inf"
    >
      Content hint test
    </span>
  </div>
</fieldset>
`;

exports[`CheckboxGroup should render an error text when invalid 1`] = `
<fieldset
  class="form-group"
>
  <legend
    id="bar"
  >
    Test checkbox group
  </legend>
  <div
    aria-describedby="err"
    aria-labelledby="bar"
    role="group"
  >
    <div>
      <span>
        FocusCatcher
      </span>
      <input
        id="foo-one"
        name="one"
      />
      <label
        for="foo-one"
      >
        One
      </label>
      <input
        id="foo-two"
        name="two"
      />
      <label
        for="foo-two"
      >
        Two
      </label>
    </div>
  </div>
  <div
    class="error-wrapper"
  >
    <span
      class="icon"
    />
    <span
      id="err"
    >
      Test error
    </span>
  </div>
</fieldset>
`;
